Since we are moving to gradle as build tool, removing the sbt build files.